# GardenPlanner

GardenPlanner/: CMakeLists.txt  CMakeLists.txt.user.fa21cd9  activitiesoverview.cpp  activitiesoverview.h  activitiesoverview.ui  activity.cpp  activity.h  activitychecktask.cpp  activitychecktask.h  addactivitydialog.cpp  addactivitydialog.h  addactivitydialog.ui  barrier.cpp  barrier.h  blobtoplantlisttask.cpp  blobtoplantlisttask.h  commonfunctions.cpp  commonfunctions.h  creategarden.cpp  creategarden.h  creategarden.ui  cryptography.cpp  cryptography.h  customcalendar.cpp  customcalendar.h  customplants.cpp  customplants.h  customplants.ui  databasefunctions.cpp  databasefunctions.h  garden.cpp  garden.h  gardencookiejar.cpp  gardencookiejar.h  getactivitiesbyworkertask.cpp  getactivitiesbyworkertask.h  login.cpp  login.h  login.ui  mainwindow.cpp  (+27 more)
GardenPlanner/Qt-Secret/src/Qt-RSA/: qrsaencryption.cpp
GardenPlanner/Qt-Secret/src/mini-gmp/: CMakeLists.txt  README.md
GardenPlanner/Qt-Secret/src/mini-gmp/CMake/QtIosCMake/: AddQtIosApp.cmake  ExportOptions.plist.in
GardenPlanner/Qt-Secret/src/mini-gmp/CMake/qt-android-cmake/: AddQtAndroidApk.cmake  qtdeploy.json.in
GardenPlanner/fmt/: fmt-targets.cmake
GardenPlannerServer/: .env  .env_for_dev  Cargo.toml
GardenPlannerServer/crates/logger/: Cargo.toml
GardenPlannerServer/crates/logger/src/: lib.rs
GardenPlannerServer/crates/logger/src/loggers/: mod.rs  stdout.rs
GardenPlannerServer/crates/trace-id/: Cargo.toml
GardenPlannerServer/crates/trace-id/src/: lib.rs
GardenPlannerServer/db/: init_db.bat
GardenPlannerServer/db/activity/: check_perm.sql  create.sql  delete.sql  get.sql  get_all.sql  get_all_from_garden.sql  get_all_from_garden_with_workers.sql  get_all_from_worker.sql  table.sql  update.sql
GardenPlannerServer/db/activity/types/: activity_with_workers.sql
GardenPlannerServer/db/auth/: create_session.sql  default_expires.sql  delete_dead_user_sessions.sql  delete_session.sql  get_session.sql  get_session_with_user.sql  renew_session.sql  session_table.sql  validate_session.sql  validate_session_with_user.sql
GardenPlannerServer/db/auth/types/: session_with_user.sql
GardenPlannerServer/db/garden/: check_perm.sql  create.sql  delete.sql  get.sql  get_all.sql  get_all_from_user.sql  table.sql  update.sql
GardenPlannerServer/db/job/: create.sql  table.sql
GardenPlannerServer/db/serial_key/: check_perm.sql  create.sql  delete.sql  get_all.sql  get_from_user.sql  table.sql
GardenPlannerServer/db/user/: check_perm.sql  create.sql  delete.sql  get.sql  get_all.sql  get_by_name.sql  table.sql  update.sql
GardenPlannerServer/db/worker/: check_perm.sql  create.sql  delete.sql  get.sql  get_all.sql  get_all_from_activity.sql  get_all_from_user.sql  table.sql  update.sql
GardenPlannerServer/src/: main.rs
GardenPlannerServer/src/models/: activity.rs  activity_with_workers.rs  garden.rs  mod.rs  passwordless_user.rs  serial_key.rs  session.rs  session_with_user.rs  user.rs  worker.rs
GardenPlannerServer/src/routes/: mod.rs
GardenPlannerServer/src/routes/activity/: create.rs  delete.rs  get.rs  get_all.rs  get_all_from_garden.rs  get_all_from_worker.rs  mod.rs  update.rs
GardenPlannerServer/src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs  register_as_admin.rs  validate.rs
GardenPlannerServer/src/routes/garden/: create.rs  delete.rs  get.rs  get_all.rs  get_all_from_user.rs  mod.rs  update.rs
GardenPlannerServer/src/routes/serial_key/: create.rs  mod.rs  validate.rs
GardenPlannerServer/src/routes/user/: delete.rs  get.rs  get_all.rs  mod.rs  update.rs
GardenPlannerServer/src/routes/worker/: create.rs  delete.rs  get.rs  get_all.rs  get_all_from_activity.rs  get_all_from_user.rs  mod.rs  update.rs
GardenPlannerServer/src/state/: mod.rs
GardenPlannerServer/src/utils/: mod.rs  sha256_hash.rs  validate_session.rs
