[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
colored = "2.0"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
atty = "^0.2.14"
windows-sys = { version = "^0.42.0", features = ["Win32_System_Console", "Win32_Foundation"] }